1999-02-21  Michael Fulbright <drmike@redhat.com>
	* made spec file generated and updated it

1998-11-23  Havoc Pennington  <hp@pobox.com>

	* configure.in: imlib.m4 gets upset if we ask for a version
	without specifying a micro version. So specify 1.8.0.

Tue Oct 13 12:43:29 PDT 1998 Manish Singh <yosh@gimp.org>

	* fixes for make dist

Tue Oct  6 22:28:37 PDT 1998 Manish Singh <yosh@gimp.org>

	* moved the fonts to $datadir/fnlib_fonts

Sun Oct  4 02:50:20 PDT 1998 Manish Singh <yosh@gimp.org>

	* redid the makefiles, got rid of the cp -r hack

Tue Sep 22 11:22:08 CDT 1998  mej <mej@mw.3com.com>
	* configure.in:  Removed gdk_fnlib/Makefile from the build list
	                 until it actually has something in it
	* Fnlib/Makefile.am:  Added $(includedir) and $(prefix)/include
	                      to INCLUDES

Thu Sep 10 15:03:06 CDT 1998  Frank Belew  <frb@umr.edu>
	* autogen.sh: added $ACLOCAL_FLAGS
	* configure.in: added support for imlib.m4 (AM_PATH_IMLIB)
	* .cvsignore: added all autogenerated files

1998-06-03  Russell Nelson  <nelson@crynwr.com>

	* Translated from RasterManglish into English.

Tue Aug  4 13:42:05 EDT 1998
(Mandrake)

snprintf doesn't work under non gcc-derivitive compilers.
moved to sprintf.  since sprintf is scattered through here
anyways it'll do for now.